2005-05-18	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Start to implement reading iPaq battery information from
	             iPaq HAL.

2005-05-17	Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.1.24
	* Makefile: Version to 0.1.24
	* sleep/interface.c, sleep/callbacks.c: Remove some old cruft, fix name 
	                                        of configuration file.

2005-05-12	Florian Boor <florian.boor@kernelconcepts.de>

	* ownerinfo.c: Change default image in login display to GPE logo.

2005-04-29	Florian Boor <florian.boor@kernelconcepts.de>

	* network.c: Remove feature to hide absent interfaces. Causes too much of
	             confusion.

2005-04-20	Florian Boor <florian.boor@kernelconcepts.de>

	* cardinfo.c: Removed obsolete header.

2005-04-15	Florian Boor <florian.boor@kernelconcepts.de>

	* *desktop.in: Fixed desktop files to comply with standard.

2005-04-14	Florian Boor <florian.boor@kernelconcepts.de>

	* data/key-layout: Fixed key symbol for power switch.

2005-04-13      Florian Boor <florian.boor@kernelconcepts.de>

	* theme.c: Some hopefully better default font sizes.
	* gpe-conf.desktop: Changed category to avoid becoming filtered by 
	                    gpe-appmgr.

2005-04-06      Florian Boor <florian.boor@kernelconcepts.de>

	* keys/keyctl.c: Fixed usage of GError.
	* Makefile: Add Kinyarwanda translation.

2005-04-02	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released Version 0.1.23
	* battery.c: Add note.
	* keyboard.c: Improved GUI.
	* Makefile: Add missing X11 libraries.

2005-04-01	Florian Boor  	<florian.boor@kernelconcepts.de>

	* HACKING: Update tasks.
	* theme.c: Fixed Xdefaults scanning.
	* main.c: Fixed infoprints.
	* keys/keyctl.c, data/key-layout: Add parameters to set image position.
	* data/key-layout, pixmaps/ipaq-s1.png: Adjusted size and positions.

2005-03-30	Florian Boor  	<florian.boor@kernelconcepts.de>

	* gpe-admin.c, storage.c, battery.c: Don't use render.h.