@@ -1,3 +1,8 @@
+2005-05-19	Florian Boor <florian.boor@kernelconcepts.de>
+
+	* battery.c: Fix typo.
+	* keys/keyctl.c: Fix GUI layout.
+
 2005-05-18	Florian Boor <florian.boor@kernelconcepts.de>
 
 	* battery.c: Start to implement reading iPaq battery information from
